<resources>
    <string name="app_name">nebula_Demo</string>
    <string name="title">H5</string>
    <string name="scan_open_page">扫描二维码</string>
    <string name="error_scan_code">扫码失败，请重试！</string>
    <string name="show_titlebar">是否显示导航栏</string>
    <string name="can_pull_down">是否支持下拉</string>
    <string name="show_process_bar">是否显示进度条</string>
    <string name="start_landscape">是否横屏启动</string>
    <string name="customize">自定义设置</string>
    <string name="ua_setting">开启自定义UserAgent</string>
    <string name="title_setting">开启自定义导航栏</string>
    <string name="menu_setting">开启自定义右上角菜单</string>
    <string name="progress_setting">自定义加载进度条</string>
    <string name="pull_refresh_setting">自定义下拉刷新</string>
    <string name="title_plugin_register">注册自定义JSAPI</string>
    <string name="title_plugin_url_intercept">注册URL拦截Plugin</string>
    <string name="embed_webview">页面嵌入容器</string>
    <string name="bg_setting">开启自定义背景</string>
    <string name="customized_bg">自定义背景</string>
    <string name="setting_success">设置成功</string>
    <string name="title_setting_tips">设置成功后，进入任意 H5 页面，可看到 title 已经自定义</string>
    <string name="menu_setting_tips">开启自定义菜单除了点击该按钮，还需要在h5中调用相关JSApi，测试该功能请先更新离线包，并在其中设置右上角按钮\n
    具体步骤为：\n
    1. 首页 -> 打开离线包 -> 更新H5应用信息\n
    2. 打开H5应用 -> 界面交互 -> 设置右上角按钮</string>
    <string name="bg_setting_tips">打开H5页面后下拉可见背景</string>
    <string name="progress_setting_tips">将加载进度条的颜色改为了自定义的金色，打开任意在线页面即可看到效果</string>
    <string name="pull_header_setting_tips">将下拉加载的 loading icon 换成了自定义的金色，默认是蓝色的，设置成功后可以打开离线包，进入界面交互页面，下拉刷新，可以看到新的金色 icon</string>
    <string name="custom_jsapi_setting_tips">注册成功\n
        现在可以打开离线包，点击\"调用自定义API1\"和\"调用自定义API2\"，即可看到自定义返回值</string>
    <string name="url_intercept_tips">Tips: 设置成功后，将对插件内设置的http://www.abc.com和https://www.def.com这两个Url进行拦截，
    并重定向到https://tech.antfin.com</string>
    <string name="embed_webview_tips">Mpaas 支持将 H5 容器嵌入原生页面</string>
    <string name="nebula_app">H5应用</string>
    <string name="open_h5_app">打开H5应用</string>
    <string name="open_h5_app_2">打开H5应用(方式二，不再推荐)</string>
    <string name="update_app">更新H5应用信息</string>
    <string name="update_specific_app">更新指定的H5应用</string>
    <string name="verify_app_setting">离线包验签说明</string>
    <string name="verify_app_setting_toast">1. 请在assets/config/custom_config.json里将h5_shouldverifyapp设置成YES\n
        2. 请在启动时调用 H5Utils.setProvider(H5PublicRsaProvider.class.getName(),new H5RsaProviderImpl()); 设置验签公钥\n
        3. 请注意，因为rsa只会在打开H5页面时初始化一次，所以RsaProvider必须在第一次H5页面打开前设置。
    </string>
    <string name="update_success">更新成功</string>
    <string name="update_failure">更新失败</string>
</resources>
